[tool.poetry]
name = "sshca"
version = "0.1.0"
description = ""
authors = ["dadevel <dadevel@disroot.org>"]
license = "MIT"
readme = "README.md"

[tool.poetry.scripts]
sshca = "sshca.main:main"

[tool.poetry.dependencies]
python = "^3.12"
boto3 = "^1.35.32"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
